[gd_scene load_steps=5 format=3 uid="uid://dyp2yemsn67uw"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_fe3jv"]

[sub_resource type="SystemFont" id="SystemFont_dsl2s"]
font_names = PackedStringArray("Chiller")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_8ebmf"]
font_names = PackedStringArray("Chiller")
subpixel_positioning = 0

[sub_resource type="SystemFont" id="SystemFont_7b3rc"]
font_names = PackedStringArray("Chiller")
subpixel_positioning = 0

[node name="Pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fe3jv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -181.0
offset_right = 223.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="continue_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.839216, 0.984314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_dsl2s")
theme_override_font_sizes/font_size = 80
text = "Continue"

[node name="main_menu_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.839216, 0.984314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_8ebmf")
theme_override_font_sizes/font_size = 80
text = "Main menu"

[node name="quit_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.839216, 0.984314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_7b3rc")
theme_override_font_sizes/font_size = 80
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
